# ai-gateway

./: .env.example  .gitignore  AI_Gateway_MVP_Plan.md  DEPLOYMENT_TROUBLESHOOTING.md  LICENSE  README.md  TODO_DEPLOYMENT_IMPROVEMENTS.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.yml
.github/workflows/: docker.yml
backend/: .env.example  Dockerfile  Dockerfile.mirror  alembic.ini  requirements.txt
backend-rs/: Cargo.toml  Dockerfile
backend-rs/migrations/: 20240613000001_initial_schema.sql  20240625000001_add_call_contents.sql  20240625000002_add_content_masks.sql  20240625000003_add_daily_usage_stats.sql
backend-rs/src/: analytics_worker.rs  auth.rs  config.rs  content_capture.rs  content_scanner.rs  db.rs  dingtalk.rs  main.rs  mask.rs  models.rs  proxy.rs  rate_limit.rs  redis.rs  security.rs
backend-rs/src/routes/: alias_routes.rs  analysis_routes.rs  audit_routes.rs  auth_routes.rs  gateway.rs  health.rs  mod.rs  provider_routes.rs  stats_routes.rs  token_routes.rs  user_routes.rs
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  redis.py  security.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md  typescript.md
docs/: USER_MANUAL.html  USER_MANUAL.md  dingtalk-login-tech-stack.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
prometheus/: prometheus.yml
scripts/: deploy.sh  docker-entrypoint.sh
(+52 files in other folders)
